# 10200-launcher

./: Cargo.toml  README.md  build.rs
src/: api.rs  auth.rs  launcher.rs  main.rs  product.rs  utils.rs
src/api/: headers.rs  login.rs  mod.rs  passport.rs  playable.rs  response.rs
src/api/endpoints/: login.rs  mod.rs  passport.rs  playable.rs
src/util/: captcha.rs  device.rs  mod.rs  session.rs
ui/: login-window.slint
ui/compontents/: logo.slint
