[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["query", "json", "form", "cookies"] }
machine-uid = "0.6"
chrono = "0.4.45"
sha2 = "0.11.0"
hex = "0.4.3"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
nanoid = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.103"
log = "0.4.33"
env_logger = "0.11.11"
slint = "1.17.0"
async-compat = "0.2.5"

[build-dependencies]
slint-build = "1.17.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
