[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
machine-uid = "0.6.0"
nanoid = "0.5.0"
reqwest = { version = "0.13.4", features = ["json", "cookies"] }
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.45"
log = "0.4.33"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "process"] }
slint = "1.17.0"
async-compat = "0.2.5"
env_logger = "0.11.11"

[build-dependencies]
slint-build = "1.17.0"